--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -11,9 +11,10 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <form action="forms/appointment.php" method="post" role="form" class="php-email-form">
+        <form method="post">
+          {% csrf_token %}
           <div class="row">
-            <div class="col-md-4 form-group">
+            <div class="col-md-4 form-group  mt-3">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
             </div>
             <div class="col-md-4 form-group mt-3 mt-md-0">
